# proxies-hub

./: .gitignore  Dockerfile  README.md  README.zh.md  config.default.yaml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/proxyhub/: __init__.py  __main__.py  cache.py  config.py  server.py  upstream.py
src/proxyhub/proxies/: all.py  apt.py  base.py  crates.py  docker.py  github.py  pypi.py  webcache.py
src/proxyhub/static/: dashboard.html  docs.html  monitor.html
tests/: test_cache.py  test_history.py  test_ranged.py
