[project]
name = "proxyhub"
version = "0.1.0"
description = "Unified pull-through mirror proxy for Docker registries, GitHub, and package indexes — with a decoupled full-speed buffering cache."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "PyYAML>=6.0",
]

[project.scripts]
proxyhub = "proxyhub.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proxyhub = ["static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
